Added registration screen

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ol": "^6.8.1",
     "raw-loader": "^4.0.2",
     "translate": "^1.4.0",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
