--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "translate": "^1.4.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-kinesis": "^1.3.3",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
