--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-kinesis": "^1.3.3",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
