--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-kinesis": "^1.3.3",
-    "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -37,8 +36,7 @@
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-vuetify": "~2.4.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
