--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "axios": "^0.23.0",
+    "cookie": "^0.4.1",
     "core-js": "^3.6.5",
     "ol": "^6.8.1",
     "raw-loader": "^4.0.2",
