--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-kinesis": "^1.3.3",
+    "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
