--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jsdoc": "^3.6.10",
     "node-sass": "^7.0.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.2.1",
