--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-kinesis": "^1.3.3",
     "vue-pusher": "^1.1.0",
     "vue-router": "^3.5.3",
+    "vue2-touch-events": "^3.2.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
